--- a/stopwatch_textual/pomodoro.css
+++ b/stopwatch_textual/pomodoro.css
@@ -8,7 +8,7 @@ stopwatch {
 }
 #time_d {
     height: 3;
-    content-align: center middle;
+    content-align: center bottom;
     text-opacity: 60%;
 }
 #start {
@@ -41,5 +41,12 @@ stopwatch {
     display: block;
 }
 
-
+#progress_bar {
+    width: 100%;
+    align:  center bottom;
+    height: auto;
+}
+#bar {
+    width: 90%;
+}
 
